# OpenGL

./: .gitignore  CMakeLists.txt  CMakePresets.json  OpenGL.sln
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters
OpenGL/Resource/Shader/: Basic.shader
OpenGL/Source/: main.cpp
